[package]
name = "azul-swgl"
version = "0.1.0"
license = "MPL-2.0"
authors = ["The Mozilla Project Developers"]
build = "build.rs"
description = "Software OpenGL implementation for WebRender."

[build-dependencies]
cc = "1.0.46"
glsl-to-cxx = { path = "../glsl-to-cxx", version = "0.1.0", package="azul-glsl-to-cxx" }
webrender_build = { path = "../webrender_build", version = "0.0.2", package="azul-webrender-build" }

[dependencies]
gl-context-loader = { version = "0.1.3", default-features = false }
